# asm

./: .justfile  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  SUBPROTOCOL_REORG.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  functional.yml  lint.yml  prover.yml  security.yml  test-coverage.yml  unit.yml
contrib/: check_ticketless_todos.sh
crates/bridge-types/: Cargo.toml
crates/bridge-types/src/: lib.rs  operator.rs  withdrawal.rs
crates/btc-verification/: Cargo.toml
crates/btc-verification/src/: body_verification.rs  errors.rs  header_verification.rs  inclusion_proof.rs  lib.rs  timestamp_store.rs  utils_btc.rs  work.rs
crates/checkpoint-types/: Cargo.toml
crates/checkpoint-types/src/: claim.rs  lib.rs
crates/checkpoint-types/ssz/: payload.ssz
crates/common/: Cargo.toml  build.rs
crates/common/src/: errors.rs  lib.rs  mmr.rs  msg.rs  serde_ssz.rs  spec.rs  state.rs  subprotocol.rs
crates/common/src/aux/: data.rs  mod.rs  provider.rs
crates/common/ssz/: pow.ssz  state.ssz
crates/crypto/: Cargo.toml
crates/crypto/src/: hash.rs  lib.rs  musig2.rs
crates/crypto/src/keys/: arbitrary.rs  compressed.rs  even.rs  mod.rs
crates/logs/: Cargo.toml
crates/logs/src/: asm_stf.rs  checkpoint.rs  constants.rs  ee_predicate_update.rs  export.rs  lib.rs
crates/manifest-types/: Cargo.toml
crates/manifest-types/src/: errors.rs  lib.rs  log.rs  manifest.rs  payloads.rs
crates/msgs/bridge/: Cargo.toml
crates/msgs/bridge/src/: lib.rs
crates/msgs/checkpoint/: Cargo.toml
crates/msgs/checkpoint/src/: lib.rs
crates/params/: Cargo.toml
crates/params/src/: anchor.rs  lib.rs  params.rs
crates/params/src/subprotocols/: admin.rs  bridge.rs  mod.rs
crates/proof-db/: Cargo.toml
crates/proof-impl/: Cargo.toml
crates/proof-impl/src/: program.rs
crates/proof-impl/src/moho_program/: program.rs
crates/proof/db/: Cargo.toml
crates/proof/db/src/: lib.rs  moho_state.rs  proof_db.rs  remote_mapping.rs  remote_status.rs  sled.rs
crates/proof/db/src/sled/: mod.rs  moho_state.rs  proof_db.rs  remote_mapping.rs  remote_status.rs
crates/proof/statements/: Cargo.toml
crates/proof/statements/src/: lib.rs  program.rs  statements.rs  test_utils.rs
crates/proof/statements/src/moho_program/: input.rs  program.rs
crates/proof/types/: Cargo.toml
crates/proof/types/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: traits.rs
crates/spec/: Cargo.toml  build.rs
crates/spec-debug/: Cargo.toml
crates/spec-debug/src/: lib.rs
crates/spec/src/: genesis.rs  lib.rs  spec.rs
crates/stf/: Cargo.toml
crates/stf/src/: lib.rs  manager.rs  preprocess.rs  stage.rs  stf.rs  transition.rs  tx_filter.rs
crates/storage/: Cargo.toml
crates/storage/src/: export_entries.rs  lib.rs  mmr.rs  state.rs
crates/subprotocols/admin/: Cargo.toml
crates/subprotocols/admin/src/: authority.rs  handler.rs  lib.rs  queued_update.rs  state.rs  subprotocol.rs
crates/subprotocols/admin/subprotocol/: Cargo.toml
crates/subprotocols/admin/subprotocol/src/: authority.rs  error.rs  handler.rs  queued_update.rs  state.rs  subprotocol.rs
crates/subprotocols/admin/txs/: Cargo.toml
crates/subprotocols/bridge-v1/: Cargo.toml
crates/subprotocols/bridge-v1/msgs/: Cargo.toml
crates/subprotocols/bridge-v1/src/: errors.rs  handler.rs  lib.rs  subprotocol.rs  test_utils.rs
crates/subprotocols/bridge-v1/subprotocol/: Cargo.toml
crates/subprotocols/checkpoint/: Cargo.toml
crates/subprotocols/checkpoint-v0/: Cargo.toml
crates/subprotocols/checkpoint/msgs/: Cargo.toml
crates/subprotocols/checkpoint/msgs/src/: lib.rs
crates/subprotocols/checkpoint/subprotocol/: Cargo.toml
crates/subprotocols/checkpoint/subprotocol/src/: handler.rs  state.rs  subprotocol.rs  verification.rs
crates/subprotocols/checkpoint/txs/: Cargo.toml
crates/subprotocols/checkpoint/txs/src/: parser.rs
crates/subprotocols/debug-v1/: Cargo.toml
crates/subprotocols/debug-v1/src/: lib.rs  subprotocol.rs  txs.rs
crates/subprotocols/debug-v1/subprotocol/: Cargo.toml
crates/subprotocols/debug-v1/subprotocol/src/: lib.rs  subprotocol.rs  txs.rs
crates/subprotocols/txs-test-utils/: Cargo.toml
crates/test-utils/: Cargo.toml
crates/test-utils/arb/: Cargo.toml
crates/test-utils/btc/: Cargo.toml
crates/test-utils/btcio/: Cargo.toml
crates/test-utils/checkpoint/: Cargo.toml
crates/test-utils/checkpoint/src/: lib.rs
crates/test-utils/src/: btc.rs  lib.rs
crates/test-utils/ssz/: Cargo.toml
crates/txs/admin/: Cargo.toml
crates/txs/bridge-v1/: Cargo.toml
crates/txs/checkpoint-v0/: Cargo.toml
crates/verify-export-entry/: Cargo.toml
crates/verify-export-entry/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: asm_state.rs  aux_resolver.rs  builder.rs  errors.rs  handle.rs  lib.rs  message.rs  service.rs  state.rs  traits.rs
functional-tests/: .gitignore  README.md  clean.sh  constants.py  entry.py  env.bash  pyproject.toml  run_test.sh
functional-tests/envs/: __init__.py  base_test.py  basic_env.py  prover_env.py  testenv.py
functional-tests/factory/: __init__.py
functional-tests/factory/asm_rpc/: __init__.py  config_cfg.py
functional-tests/factory/bitcoin/: __init__.py
functional-tests/factory/common/: __init__.py  asm_params.py
functional-tests/rpc/: __init__.py  asm_types.py  client.py  service.py
functional-tests/tests/: fn_asm_block_test.py  fn_asm_checkpoint_tip_test.py  fn_asm_export_entry_mmr_proof_test.py  fn_asm_moho_state_test.py  fn_asm_proof_test.py
functional-tests/utils/: logging.py  utils.py
guest-builder/sp1/: Cargo.toml  build.rs
guest-builder/sp1/guest-asm/: Cargo.toml
guest-builder/sp1/guest-asm/src/: main.rs
guest-builder/sp1/guest-moho/: Cargo.toml
guest-builder/sp1/guest-moho/src/: main.rs
guest-builder/sp1/src/: lib.rs
tests/: Cargo.toml  lib.rs
tests/asm/: admin.rs  admin_to_bridge.rs  admin_to_checkpoint.rs  admin_to_ee_stf.rs  admin_to_stf.rs  checkpoint.rs  core.rs
tests/harness/: admin.rs  bridge.rs  checkpoint.rs  test_harness.rs  worker_context.rs
(+99 files in other folders)
