[workspace]
resolver = "2"

members = [
  "crates/common",
  "crates/logs",
  "crates/params",
  "crates/msgs/bridge",
  "crates/msgs/checkpoint",
  "crates/stf",
  "crates/manifest-types",
  "crates/proof-impl",
  "crates/spec",
  "crates/spec-debug",
  "crates/subprotocols/bridge-v1",
  "crates/subprotocols/debug-v1",
  "crates/subprotocols/admin",
  "crates/txs/admin",
  "crates/txs/checkpoint",
  "crates/subprotocols/checkpoint",
  "crates/txs/test-utils",
  "crates/txs/bridge-v1",
  "crates/worker",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "warn"
clippy.absolute_paths = "warn"
rustdoc.all = "warn"

[workspace.dependencies]
# workspace crates
strata-asm-bridge-msgs = { path = "crates/msgs/bridge" }
strata-asm-checkpoint-msgs = { path = "crates/msgs/checkpoint" }
strata-asm-common = { path = "crates/common" }
strata-asm-logs = { path = "crates/logs" }
strata-asm-manifest-types = { path = "crates/manifest-types" }
strata-asm-params = { path = "crates/params" }
strata-asm-proof-impl = { path = "crates/proof-impl" }
strata-asm-proto-administration = { path = "crates/subprotocols/admin" }
strata-asm-proto-bridge-v1 = { path = "crates/subprotocols/bridge-v1" }
strata-asm-proto-checkpoint = { path = "crates/subprotocols/checkpoint" }
strata-asm-proto-debug-v1 = { path = "crates/subprotocols/debug-v1" }
strata-asm-spec = { path = "crates/spec" }
strata-asm-spec-debug = { path = "crates/spec-debug" }
strata-asm-stf = { path = "crates/stf" }
strata-asm-txs-admin = { path = "crates/txs/admin" }
strata-asm-txs-bridge-v1 = { path = "crates/txs/bridge-v1" }
strata-asm-txs-checkpoint = { path = "crates/txs/checkpoint" }
strata-asm-txs-test-utils = { path = "crates/txs/test-utils" }
strata-asm-worker = { path = "crates/worker" }

# Dependencies from alpenlabs/alpen pinned to commit cbd7f05 (main @ 2026-03-17)
strata-acct-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-bridge-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-btc-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-btc-verification = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-checkpoint-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-checkpoint-types-ssz = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-codec-utils = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-crypto = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-identifiers = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-ol-chain-types-new = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-ol-chainstate-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-ol-stf = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-primitives = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-state = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-test-utils = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-test-utils-btc = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-test-utils-btcio = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-test-utils-l2 = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }
strata-test-utils-ssz = { git = "https://github.com/alpenlabs/alpen.git", rev = "cbd7f05da454baeedd2cde6d31e2e71a1b02841a" }

# Dependencies from alpenlabs/moho pinned to commit 97b9f2a (main @ 2026-03-14)
moho-runtime-impl = { git = "https://github.com/alpenlabs/moho", rev = "97b9f2af3bc292857e53b7ab9852ae385d5eff2d" }
moho-runtime-interface = { git = "https://github.com/alpenlabs/moho", rev = "97b9f2af3bc292857e53b7ab9852ae385d5eff2d" }
moho-types = { git = "https://github.com/alpenlabs/moho", rev = "97b9f2af3bc292857e53b7ab9852ae385d5eff2d" }

# dependencies from alpenlabs/strata-common
strata-codec = { git = "https://github.com/alpenlabs/strata-common", features = [
  "derive",
], tag = "v0.1.0-alpha-rc9" }
strata-l1-envelope-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-l1-txfmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-merkle = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-msg-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-predicate = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-service = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-tasks = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }

# dependencies from alpenlabs/ssz-gen
ssz = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
ssz_codegen = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
ssz_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
ssz_primitives = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
ssz_types = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
tree_hash = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
tree_hash_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }

# dependencies from alpenlabs/zkaleido
zkaleido = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc21" }
zkaleido-native-adapter = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc21" }

# external dependencies
anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
async-trait = "0.1.80"
bincode = "1.3.3"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoin-bosd = { version = "0.9.0", default-features = false }
bitcoind-async-client = { version = "0.10.1", features = ["29_0"] }
bitvec = { version = "1.0.1", features = ["serde"] }
corepc-node = { version = "0.10.0", features = ["29_0"] }
hex-literal = "0.4"
proptest = "1.9.0"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10"
thiserror = "2.0.11"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"

# Temporary override (required for now):
# `strata-state` and other `alpen.git` crates still pull `strata-asm-*` transitively from git.
# Without this patch, Cargo resolves both git + local workspace copies of `strata-asm-*`,
# producing cross-crate type mismatches (same type name, different crate instance).
# `alpen` currently has this same issue.
# Remove this once `alpen` starts using the ASM crates from this workspace source.
[patch."https://github.com/alpenlabs/alpen.git"]
strata-asm-bridge-msgs = { path = "crates/msgs/bridge" }
strata-asm-checkpoint-msgs = { path = "crates/msgs/checkpoint" }
strata-asm-common = { path = "crates/common" }
strata-asm-logs = { path = "crates/logs" }
strata-asm-manifest-types = { path = "crates/manifest-types" }
strata-asm-params = { path = "crates/params" }
strata-asm-proto-administration = { path = "crates/subprotocols/admin" }
strata-asm-proto-bridge-v1 = { path = "crates/subprotocols/bridge-v1" }
strata-asm-proto-checkpoint = { path = "crates/subprotocols/checkpoint" }
strata-asm-proto-debug-v1 = { path = "crates/subprotocols/debug-v1" }
strata-asm-spec = { path = "crates/spec" }
strata-asm-spec-debug = { path = "crates/spec-debug" }
strata-asm-stf = { path = "crates/stf" }
strata-asm-txs-admin = { path = "crates/txs/admin" }
strata-asm-txs-bridge-v1 = { path = "crates/txs/bridge-v1" }
strata-asm-txs-checkpoint = { path = "crates/txs/checkpoint" }
strata-asm-txs-test-utils = { path = "crates/txs/test-utils" }
strata-asm-worker = { path = "crates/worker" }
