[workspace]
resolver = "2"

members = [
  "crates/common",
  "crates/logs",
  "crates/manifest-types",
  "crates/msgs/bridge",
  "crates/msgs/checkpoint",
  "crates/params",
  "crates/proof/db",
  "crates/proof/statements",
  "crates/proof/types",
  "crates/rpc",
  "crates/spec",
  "crates/spec-debug",
  "crates/stf",
  "crates/subprotocols/admin",
  "crates/subprotocols/bridge-v1",
  "crates/subprotocols/checkpoint",
  "crates/subprotocols/checkpoint-v0",
  "crates/subprotocols/debug-v1",
  "crates/txs/admin",
  "crates/txs/bridge-v1",
  "crates/txs/checkpoint",
  "crates/txs/checkpoint-v0",
  "crates/txs/test-utils",
  "crates/worker",

  # binaries listed separately
  "bin/asm-runner",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "warn"
clippy.absolute_paths = "warn"
rustdoc.all = "warn"

[workspace.dependencies]
# workspace crates
strata-asm-bridge-msgs = { path = "crates/msgs/bridge" }
strata-asm-checkpoint-msgs = { path = "crates/msgs/checkpoint" }
strata-asm-common = { path = "crates/common" }
strata-asm-logs = { path = "crates/logs" }
strata-asm-manifest-types = { path = "crates/manifest-types" }
strata-asm-params = { path = "crates/params" }
strata-asm-proof-impl = { path = "crates/proof/statements" }
strata-asm-proof-types = { path = "crates/proof/types" }
strata-asm-proto-administration = { path = "crates/subprotocols/admin" }
strata-asm-proto-bridge-v1 = { path = "crates/subprotocols/bridge-v1" }
strata-asm-proto-checkpoint = { path = "crates/subprotocols/checkpoint" }
strata-asm-proto-checkpoint-v0 = { path = "crates/subprotocols/checkpoint-v0" }
strata-asm-proto-debug-v1 = { path = "crates/subprotocols/debug-v1" }
strata-asm-rpc = { path = "crates/rpc" }
strata-asm-spec = { path = "crates/spec" }
strata-asm-spec-debug = { path = "crates/spec-debug" }
strata-asm-stf = { path = "crates/stf" }
strata-asm-txs-admin = { path = "crates/txs/admin" }
strata-asm-txs-bridge-v1 = { path = "crates/txs/bridge-v1" }
strata-asm-txs-checkpoint = { path = "crates/txs/checkpoint" }
strata-asm-txs-checkpoint-v0 = { path = "crates/txs/checkpoint-v0" }
strata-asm-txs-test-utils = { path = "crates/txs/test-utils" }
strata-asm-worker = { path = "crates/worker" }
strata-bridge-proof-db = { path = "crates/proof/db" }

# Dependencies from alpenlabs/alpen pinned to commit 787b804 (main @ 2026-03-17)
# NOTE: keep `typed-sled` pinned in Cargo.lock to 9062bff for compatibility with this alpen rev.
# Newer typed-sled commits can break transitive crates (e.g. `strata-db-store-sled`) in test builds.
strata-bridge-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-btc-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-btc-verification = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-checkpoint-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-checkpoint-types-ssz = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-codec-utils = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-crypto = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-db-store-sled = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-identifiers = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-ol-chain-types-new = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-ol-chainstate-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-ol-stf = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-primitives = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-state = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-storage = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-test-utils = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-test-utils-btc = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-test-utils-btcio = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-test-utils-l2 = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }
strata-test-utils-ssz = { git = "https://github.com/alpenlabs/alpen.git", rev = "787b804c41800bbbf8d3632637a7eda332fc9f39" }

# Dependencies from alpenlabs/strata-bridge pinned to commit fc966d5 (STR-2598-asm-stf-proof-statements @ 2026-03-17)
btc-tracker = { git = "https://github.com/alpenlabs/strata-bridge.git", rev = "fc966d5f81c773de10a4ef3a66666687ec11d715" }
strata-bridge-common = { git = "https://github.com/alpenlabs/strata-bridge.git", rev = "fc966d5f81c773de10a4ef3a66666687ec11d715" }

# Dependencies from alpenlabs/moho pinned to commit 97e9d28 (main @ 2026-03-12)
moho-runtime-impl = { git = "https://github.com/alpenlabs/moho", rev = "97e9d281f310e9c2e60cf80448c95e855be589b9" }
moho-runtime-interface = { git = "https://github.com/alpenlabs/moho", rev = "97e9d281f310e9c2e60cf80448c95e855be589b9" }
moho-types = { git = "https://github.com/alpenlabs/moho", rev = "97e9d281f310e9c2e60cf80448c95e855be589b9" }

# dependencies from alpenlabs/strata-common
strata-codec = { git = "https://github.com/alpenlabs/strata-common", features = [
  "derive",
], tag = "v0.1.0-alpha-rc9" }
strata-l1-envelope-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-l1-txfmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-merkle = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-msg-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-predicate = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-service = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }
strata-tasks = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc9" }

# dependencies from alpenlabs/ssz-gen
ssz = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
ssz_codegen = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
ssz_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
ssz_primitives = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
ssz_types = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
tree_hash = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }
tree_hash_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }

# dependencies from alpenlabs/zkaleido
# FIXME: (@prajwolrg) use a proper tag
zkaleido = { git = "https://github.com/alpenlabs/zkaleido", rev = "750c209f5850af29e34c39c250c24e1c69ffa2aa", features = [
  "borsh",
] }
zkaleido-native-adapter = { git = "https://github.com/alpenlabs/zkaleido", rev = "750c209f5850af29e34c39c250c24e1c69ffa2aa" }

# external dependencies
anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
async-trait = "0.1.80"
bincode = "1.3.3"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoin-bosd = { version = "0.9.0", default-features = false }
bitcoind-async-client = { version = "0.10.1", features = ["29_0"] }
bitvec = { version = "1.0.1", features = ["serde"] }
borsh = { version = "1.5.0", features = ["derive"] }
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
corepc-node = { version = "0.10.0", features = ["29_0"] }
futures = "0.3.31"
hex-literal = "0.4"
jsonrpsee = "0.24.7"
proptest = "1.9.0"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10"
sled = "0.34.7"
tempfile = "3.10.1"
thiserror = "2.0.11"
tokio = { version = "1.37", features = ["full"] }
toml = "0.8.20"
tracing = "0.1"

# Temporary override (required for now):
# `strata-state` and other `alpen.git` crates still pull `strata-asm-*` transitively from git.
# Without this patch, Cargo resolves both git + local workspace copies of `strata-asm-*`,
# producing cross-crate type mismatches (same type name, different crate instance).
# `alpen` currently has this same issue.
# Remove this once `alpen` starts using the ASM crates from this workspace source.
[patch."https://github.com/alpenlabs/alpen.git"]
strata-asm-bridge-msgs = { path = "crates/msgs/bridge" }
strata-asm-checkpoint-msgs = { path = "crates/msgs/checkpoint" }
strata-asm-common = { path = "crates/common" }
strata-asm-logs = { path = "crates/logs" }
strata-asm-manifest-types = { path = "crates/manifest-types" }
strata-asm-params = { path = "crates/params" }
strata-asm-proto-administration = { path = "crates/subprotocols/admin" }
strata-asm-proto-bridge-v1 = { path = "crates/subprotocols/bridge-v1" }
strata-asm-proto-checkpoint = { path = "crates/subprotocols/checkpoint" }
strata-asm-proto-checkpoint-v0 = { path = "crates/subprotocols/checkpoint-v0" }
strata-asm-proto-debug-v1 = { path = "crates/subprotocols/debug-v1" }
strata-asm-spec = { path = "crates/spec" }
strata-asm-spec-debug = { path = "crates/spec-debug" }
strata-asm-stf = { path = "crates/stf" }
strata-asm-txs-admin = { path = "crates/txs/admin" }
strata-asm-txs-bridge-v1 = { path = "crates/txs/bridge-v1" }
strata-asm-txs-checkpoint = { path = "crates/txs/checkpoint" }
strata-asm-txs-checkpoint-v0 = { path = "crates/txs/checkpoint-v0" }
strata-asm-txs-test-utils = { path = "crates/txs/test-utils" }
strata-asm-worker = { path = "crates/worker" }
