[package]
name = "strata-bridge-types"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bitvec.workspace = true
strata-identifiers.workspace = true

arbitrary.workspace = true
borsh.workspace = true
serde.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
thiserror.workspace = true

[dev-dependencies]
strata-test-utils-arb.workspace = true
