[package]
name = "strata-asm-common"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-manifest-types.workspace = true
strata-btc-types.workspace = true
strata-btc-verification.workspace = true
strata-identifiers.workspace = true
strata-l1-txfmt.workspace = true
strata-merkle = { workspace = true, features = ["ssz"] }
strata-msg-fmt.workspace = true

bitcoin.workspace = true
borsh.workspace = true
serde.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
ssz_primitives.workspace = true
ssz_types = { workspace = true, features = ["serde"] }
thiserror.workspace = true
tracing.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[build-dependencies]
ssz_codegen.workspace = true

[dev-dependencies]
strata-identifiers.workspace = true
strata-test-utils-arb.workspace = true
