[package]
name = "strata-asm-crypto"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-identifiers.workspace = true

arbitrary = { workspace = true, optional = true }
secp256k1.workspace = true

sha2.workspace = true

[dev-dependencies]
bitcoin.workspace = true
rand.workspace = true
proptest.workspace = true

[features]
default = ["arbitrary"]
arbitrary = ["dep:arbitrary"]
