[package]
name = "strata-asm-logs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bitcoin.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
strata-asm-common.workspace = true
strata-checkpoint-types.workspace = true
strata-checkpoint-types-ssz.workspace = true
strata-codec.workspace = true
strata-codec-utils.workspace = true
strata-identifiers.workspace = true
strata-msg-fmt.workspace = true
strata-predicate.workspace = true
strata-primitives.workspace = true

[dev-dependencies]
