[package]
edition = "2021"
name = "strata-asm-proof-impl"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
moho-runtime-impl.workspace = true
moho-runtime-interface.workspace = true
moho-types.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-spec.workspace = true
strata-asm-stf.workspace = true
strata-identifiers.workspace = true
strata-predicate.workspace = true
zkaleido.workspace = true

bitcoin.workspace = true
sha2.workspace = true

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
zkaleido-native-adapter.workspace = true

[dev-dependencies]
serde_json.workspace = true
strata-asm-params.workspace = true
strata-btc-types.workspace = true
strata-l1-txfmt.workspace = true
strata-test-utils-btc.workspace = true
