[package]
name = "strata-asm-spec"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true, optional = true }
strata-asm-common.workspace = true
strata-asm-params.workspace = true
strata-asm-proto-administration.workspace = true
strata-asm-proto-bridge-v1.workspace = true
strata-asm-proto-checkpoint.workspace = true
strata-l1-txfmt.workspace = true

[build-dependencies]
serde_json.workspace = true
strata-asm-params.workspace = true
