[package]
name = "strata-asm-spec"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-params.workspace = true
strata-asm-proto-admin.workspace = true
strata-asm-proto-bridge-v1.workspace = true
strata-asm-proto-checkpoint.workspace = true
strata-btc-verification.workspace = true
