[package]
name = "strata-asm-bridge-msgs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
arbitrary.workspace = true
serde.workspace = true
ssz.workspace = true
ssz_derive.workspace = true

strata-asm-common.workspace = true
strata-asm-txs-bridge-v1.workspace = true
strata-bridge-types.workspace = true
strata-primitives.workspace = true
