[package]
name = "strata-asm-checkpoint-msgs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde.workspace = true
ssz.workspace = true

strata-asm-common.workspace = true
strata-asm-txs-checkpoint.workspace = true
strata-predicate.workspace = true
strata-primitives.workspace = true
