[package]
name = "strata-bridge-proof-db"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-asm-proof-types.workspace = true
strata-identifiers.workspace = true

borsh.workspace = true
sled.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio.workspace = true
zkaleido.workspace = true

[lints]
workspace = true
