[package]
edition = "2021"
name = "strata-asm-proof-impl"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
moho-runtime-impl.workspace = true
moho-runtime-interface.workspace = true
moho-types.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-spec.workspace = true
strata-asm-stf.workspace = true
strata-btc-types = { workspace = true, optional = true }
strata-btc-verification.workspace = true
strata-identifiers = { workspace = true, optional = true }
strata-l1-txfmt = { workspace = true, optional = true }
strata-predicate.workspace = true
strata-test-utils-btc = { workspace = true, optional = true }
tree_hash.workspace = true
zkaleido.workspace = true

bitcoin.workspace = true

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
zkaleido-native-adapter.workspace = true

[features]
test-utils = [
  "dep:strata-btc-types",
  "dep:strata-l1-txfmt",
  "dep:strata-test-utils-btc",
  "dep:strata-identifiers",
]

[dev-dependencies]
strata-btc-types.workspace = true
strata-identifiers.workspace = true
strata-l1-txfmt.workspace = true
strata-test-utils-btc.workspace = true
