[package]
edition = "2021"
name = "strata-asm-proof-impl"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
moho-runtime-impl.workspace = true
moho-runtime-interface.workspace = true
moho-types.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-params = { workspace = true, optional = true }
strata-asm-spec.workspace = true
strata-asm-stf.workspace = true
strata-btc-types = { workspace = true, optional = true }
strata-btc-verification.workspace = true
strata-identifiers = { workspace = true, optional = true }
strata-predicate.workspace = true
strata-test-utils-arb = { workspace = true, optional = true }
strata-test-utils-btc = { workspace = true, optional = true }
tree_hash.workspace = true
zkaleido.workspace = true

arbitrary = { workspace = true, optional = true }
bitcoin.workspace = true

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
zkaleido-native-adapter.workspace = true

[features]
test-utils = [
  "dep:strata-btc-types",
  "dep:strata-test-utils-btc",
  "dep:strata-test-utils-arb",
  "dep:strata-identifiers",
  "dep:strata-asm-params",
  "dep:arbitrary",
]

[dev-dependencies]
arbitrary.workspace = true
strata-btc-types.workspace = true
strata-identifiers.workspace = true
strata-test-utils-btc.workspace = true
strata-test-utils-arb.workspace = true
strata-asm-params.workspace = true
